kuber/prod/svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: wq-bot01
  name: weather-svc01
spec:
  selector:
    app: weather-quality-bot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
