kuber/prod/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-rest
  namespace: wq-bot01
spec:
  ingressClassName: nginx
  rules:
  - host: weather.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-svc01
            port:
              number: 8080
